[package]
name = "solana-dekey"
version = "0.2.0"
edition = "2021"
description = "solana-dekey is a utility program that replaces Solana validator identity pubkeys and vote account pubkeys with the validator's name."
license = "CC-PDDC"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "=0.20.0"
bincode = "=1.3.3"
bs58 = "=0.4.0"
dirs = "=4.0.0"
regex = "=1.7.1"
serde = { version = "=1.0.145", features = ["derive"] }
serde_json = "=1.0"
ureq = "=2.4.0"
